--- a/src/main/resources/templates/getCourier.html
+++ b/src/main/resources/templates/getCourier.html
@@ -1,218 +1,31 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>订单管理</title>
-        <link rel="stylesheet" th:href="@{bootstrap/css/bootstrap.css}" />
-        <link rel="stylesheet" th:href="@{bootstrap/table/bootstrap-table.css}" />
-        <link rel="stylesheet" th:href="@{bootstrap/datetimepicker/css/bootstrap-datetimepicker.css}" />
-        <link rel="stylesheet" th:href="@{bootstrap/fileinput/css/fileinput.css}" />
-        <link rel="stylesheet" th:href="@{bootstrap/viladator/css/bootstrapValidator.css}" />
-        <script th:src="@{jquery.js}"></script>
-        <script th:src="@{bootstrap/js/bootstrap.js}"></script>
-        <script th:src="@{bootstrap/table/bootstrap-table.js}"></script>
-        <script th:src="@{bootstrap/table/locale/bootstrap-table-zh-CN.js}"></script>
-        <script th:src="@{bootstrap/datetimepicker/js/bootstrap-datetimepicker.js}"></script>
-        <script th:src="@{bootstrap/datetimepicker/js/locales/bootstrap-datetimepicker.zh-CN.js}"></script>
-        <script th:src="@{bootstrap/table/extensions/export/bootstrap-table-export.js}"></script>
-        <script th:src="@{bootstrap/fileinput/js/fileinput.js}"></script>
-        <script th:src="@{bootstrap/fileinput/js/locales/zh.js}"></script>
-        <script th:src="@{bootstrap/viladator/js/bootstrapValidator.js}"></script>
-        <script th:src="@{bootstrap/viladator/js/language/zh_CN.js}"></script>
-        <script th:src="@{js/indexPage.js}"></script>
-    <meta charset="utf-8" />
-    </head>
-    <body>
-    <div class="row base-margin" id="query" style="width: 95%">
-        <ol class="breadcrumb">
-                <li><strong><span style="color: #27a0d7;padding-left: 10px;">订单列表</span></strong></li>
-            </ol>
-                <form class="form-inline" role="form" style="float: left; width: 100%;padding-left: 35px;" method="post" id="queryForm">
-                    <div class="form-group">
-                <label for="phoneNum">手机:</label>
-                <input type="text" class="form-control" name="phoneNum" id="phoneNum"  placeholder="请输入手机号码"/>
-            </div>
-            <div class="form-group">
-                <label for="courierNum">单号:</label>
-                <input type="text" class="form-control" name="courierNum" id="courierNum"  placeholder="请输入单号"/>
-            </div>
-            <div class="form-group">
+<html xmlns:th="http://www.thymeleaf.org" lang="zh-cn">
 
-                   <!-- <div class="input-append date form_datetime" data-date="2013-02-21 15:25:00" id = "startDiv">
-                        下单日期: <input  type="text" class="form-control"  readonly="readonly" id = "startDate"/>
-                        <span class="add-on"><i class="icon-remove"></i></span>
-                        <span class="add-on"><i class="icon-calendar"></i></span>
-                    </div>-->
-                <div id = "startDateDiv" class="input-group date form_datetime " data-date="2017-11-01 00:00:00" data-date-format="yyyy-mm-dd hh:ii" data-link-field="startDate">
-                    <input class="form-control" size="20" type="text" value="" readonly="readonly"/>
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
-                </div>
-                <input type="hidden" id="startDate" value="" /><br/>
-                <!--<input placeholder="结束日期" class="form-control layer-date" id="endDate" name="endDate"/>-->
-            </div>
-            <div class="form-group">
-                <!--<div class="input-append date form_datetime" data-date="2013-02-21 15:25:00">
-                    <input  type="text" class="form-control"  readonly="readonly" id = "endDate"/>
-                    <span class="add-on"><i class="glyphicon glyphicon-remove"></i></span>
-                    <span class="add-on"><i class="glyphicon glyphicon-calendar"></i></span>
-                </div>-->
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>订单查询</title>
+    <link th:href="@{mobile/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link th:href="@{mobile/css/signin.css}" rel="stylesheet"/>
+    <script th:src="@{jquery.js}"></script>
+    <script th:src="@{js/getCourier.js}"></script>
+</head>
 
-                <div id = "endDateDiv" class="input-group date form_datetime " data-date="2020-01-01 00:00:00" data-date-format="yyyy-mm-dd hh:ii" data-link-field="endDate">
-                    <input class="form-control" size="20" type="text" value="" readonly="readonly"/>
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
-                </div>
-                <input type="hidden" id="endDate" value="" /><br/>
+<body>
 
-            </div>
-            <script>
-
-                $('#startDateDiv').datetimepicker({
-                    language:  'zh-CN',
-                    weekStart: 1,
-                    todayBtn:  1,
-                    autoclose: 1,
-                    todayHighlight: 1,
-                    startView: 2,
-                    forceParse: 0,
-                    showMeridian: 1
-                });
-                $('#endDateDiv').datetimepicker({
-                    language:  'zh-CN',
-                    weekStart: 1,
-                    todayBtn:  1,
-                    autoclose: 1,
-                    todayHighlight: 1,
-                    startView: 2,
-                    forceParse: 0,
-                    showMeridian: 1
-                });
-
-            </script>
-            <div class="form-group">
-                <button type="button" id="queryBtn" onclick="query();" class="btn btn-primary">查询</button>
-            </div>
-            <div class="form-group btn-right">
-                <button type="button" class="btn btn-primary " data-toggle="modal" onclick="add();" >新增订单</button>
-            </div>
-            <div class="form-group btn-right">
-                <button type="button" class="btn btn-primary" id="importBtn" onclick="importOrder();">导入订单</button>
-            </div>
-
-            <div class="form-group btn-right">
-                <button type="button" class="btn btn-warning" id="batchDelete" onclick="deleteInBatch();">批量删除</button>
-            </div>
+    <div class="signin">
+        <div class="signin-head"><img th:src="@{mobile/images/test/head_120.png}" alt="" class="img-circle"/></div>
+        <form class="form-signin" role="form" action="#">
+            <input type="text" id="phoneNum" class="form-control" placeholder="手机号码" required="required" autofocus="autofocus" />
+            <button type="button" id="queryBtn" onclick="searchCourier();" class="btn btn-lg btn-warning btn-block">查询</button>
+            <!--<button class="btn btn-lg btn-warning btn-block"  onclick="searchCourier();">查询</button>-->
+            <br/><span id="span" style="color:blue;"></span>
         </form>
     </div>
-    <div class="container" style="width: 98%">
-        <table id="result-table">
-        </table>
+
+    <div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';">
+        <strong>声明:</strong><p>此平台仅提供物流信息查询,复制查询结果在圆通官网查询物流详细信息</p>
     </div>
-
-    <!-- 模态框（Modal） -->
-    <div class="modal fade" id="editWindow" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                        &times;
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">
-                        订单编辑
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <form class="form-horizontal" role="form" id = "editForm">
-                        <input style="display: none;" id = "id1"/>
-                        <div class="form-group">
-                            <label for="courierNum1" class="col-sm-2 control-label">单号</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="courierNum1" name="courierNum1"
-                                       placeholder="请输入单号"/>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="name1" class="col-sm-2 control-label">姓名</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="name1" name="name1"
-                                       placeholder="请输入姓名"/>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="phoneNum1" class="col-sm-2 control-label">手机</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="phoneNum1" name="phoneNum1"
-                                       placeholder="请输入手机号"/>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="orderDate" class="col-sm-2 control-label">下单时间</label>
-                            <div class="col-sm-10">
-                                <!--<div id="orderDatePicker" class="input-append date form_datetime" data-date="2013-02-21 15:25:00">
-                                    <input  type="text" class="form-control"  readonly="readonly" id = "orderDate"/>
-                                    <span class="add-on"><i class="icon-remove"></i></span>
-                                    <span class="add-on"><i class="icon-calendar"></i></span>
-                                </div>-->
-                                <div id = "orderDateDiv" class="input-group date form_datetime " data-date="2020-01-01 00:00:00" data-date-format="yyyy-mm-dd hh:ii" data-link-field="endDate">
-                                    <input class="form-control" size="20" type="text" value="" readonly="readonly" name="orderDate"/>
-                                    <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-                                    <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
-                                </div>
-                                <input type="hidden" id="orderDate" value="" /><br/>
-                                <script type="text/javascript">
-                                    $('#orderDateDiv').datetimepicker({
-                                        language:  'zh-CN',
-                                        weekStart: 1,
-                                        todayBtn:  1,
-                                        autoclose: 1,
-                                        todayHighlight: 1,
-                                        startView: 2,
-                                        forceParse: 0,
-                                        showMeridian: 1
-                                    });
-                                </script>
-                            </div>
-                        </div>
-
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">取消
-                    </button>
-                    <button type="button" class="btn btn-primary" onclick="save();">
-                        提交
-                    </button>
-                </div>
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal -->
-    </div>
-
-
-    <!-- 模态框（Modal） -->
-    <div class="modal fade" id="importWindow" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
-                        &times;
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel1">
-                        导入订单
-                    </h4>
-                </div>
-                <div class="modal-body">
-                    <a href="模板.xls" class="form-control" style="border:none;" target="_blank">下载导入模板</a>
-                    <input type="file" name="txt_file" id="txt_file" multiple="multiple" class="file-loading" />
-                </div>
-               <!-- <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">取消
-                    </button>
-                    <button type="button" class="btn btn-primary" onclick="save();">
-                        提交
-                    </button>
-                </div>-->
-            </div><!-- /.modal-content -->
-        </div><!-- /.modal -->
-    </div>
-    </body>
- </html>
+</body>
+</html>
