--- a/src/main/resources/templates/indexPage.html
+++ b/src/main/resources/templates/indexPage.html
@@ -42,8 +42,9 @@
                         <span class="add-on"><i class="icon-remove"></i></span>
                         <span class="add-on"><i class="icon-calendar"></i></span>
                     </div>-->
-                <div id = "startDateDiv" class="input-group date form_datetime " data-date="2017-11-01 00:00:00" data-date-format="yyyy-mm-dd hh:ii" data-link-field="startDate">
-                    <input class="form-control" size="20" type="text" value="" readonly="readonly"/>
+                下单日期:
+                <div id = "startDateDiv" class="input-group date form_datetime "  data-date-format="yyyy-mm-dd hh:ii" data-link-field="startDate">
+                    <input class="form-control" size="20" type="text" value="" readonly="readonly" id="startDate1"/>
                     <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
                     <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
                 </div>
@@ -57,8 +58,8 @@
                     <span class="add-on"><i class="glyphicon glyphicon-calendar"></i></span>
                 </div>-->
 
-                <div id = "endDateDiv" class="input-group date form_datetime " data-date="2020-01-01 00:00:00" data-date-format="yyyy-mm-dd hh:ii" data-link-field="endDate">
-                    <input class="form-control" size="20" type="text" value="" readonly="readonly"/>
+                <div id = "endDateDiv" class="input-group date form_datetime "  data-date-format="yyyy-mm-dd hh:ii" data-link-field="endDate">
+                    <input class="form-control" size="20" type="text" value="" readonly="readonly" id="endDate1"/>
                     <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
                     <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
                 </div>
@@ -153,8 +154,8 @@
                                     <span class="add-on"><i class="icon-remove"></i></span>
                                     <span class="add-on"><i class="icon-calendar"></i></span>
                                 </div>-->
-                                <div id = "orderDateDiv" class="input-group date form_datetime " data-date="2020-01-01 00:00:00" data-date-format="yyyy-mm-dd hh:ii" data-link-field="endDate">
-                                    <input class="form-control" size="20" type="text" value="" readonly="readonly" name="orderDate"/>
+                                <div id = "orderDateDiv" class="input-group date form_datetime "  data-date-format="yyyy-mm-dd hh:ii" data-link-field="orderDate">
+                                    <input class="form-control" size="20" type="text" value="" readonly="readonly"  id="orderDate1"/>
                                     <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
                                     <span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
                                 </div>
