--- a/src/main/resources/templates/shopping.html
+++ b/src/main/resources/templates/shopping.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<!--suppress ALL -->
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-    <title>阿迪2017明星同款套装免费送</title>
+    <title th:text="${topTitle}">waa</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"/>
     <link type="text/css" rel="stylesheet" th:href="@{/shopping/base.css}"/>
@@ -23,7 +24,7 @@
     <div class="pt-22">
 
         <div class="top">
-            <p>阿迪2017明星同款套装免费送</p>
+            <p th:text="${topTitle}"></p>
             <img th:src="@{/shopping/1508331001.jpg}"/>
             <img th:src="@{/shopping/1508326972.jpg}"/>
             <img th:src="@{/shopping/1508333142.jpg}"/>
