--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -20,9 +20,8 @@
     <li><strong><button style="color: #27a0d7;padding-left: 10px;">人员管理</button></strong></li>
     <li><strong><button id="goods" style="color: #27a0d7;padding-left: 10px;" onclick="turnPage('goods')">商品管理</button></strong></li>
     <li><strong><button id="style" style="color: #27a0d7;padding-left: 10px;" onclick="turnPage('style')">款式管理</button></strong></li>
-
-    <li><strong><button style="color: #27a0d7;padding-left: 10px;">尺码管理</button></strong></li>
-    <li><strong><button style="color: #27a0d7;padding-left: 10px;">库存管理</button></strong></li>
+    <li><strong><button id="clothSize" style="color: #27a0d7;padding-left: 10px;" onclick="turnPage('clothSize')">尺码管理</button></strong></li>
+    <li><strong><button id="stock" style="color: #27a0d7;padding-left: 10px;" onclick="turnPage('stock')">库存管理</button></strong></li>
 </ol>
 <span style="visibility: hidden" id="hiddenFlag" th:text="${HIDDEN_FLAG}"></span>
 </body>
