--- a/src/main/resources/templates/orderPage.html
+++ b/src/main/resources/templates/orderPage.html
@@ -96,10 +96,10 @@
                 <button type="button" id="queryBtn" onclick="query();" class="btn btn-primary">查询</button>
             </div>
             <div class="form-group btn-right">
-                <button type="button" class="btn btn-primary " data-toggle="modal" onclick="add();" >新增订单</button>
+                <button type="button" class="btn btn-primary " data-toggle="modal" onclick="add();" >新增</button>
             </div>
             <div class="form-group btn-right">
-                <button type="button" class="btn btn-primary" id="importBtn" onclick="importOrder();">导入订单</button>
+                <button type="button" class="btn btn-primary" id="importBtn" onclick="importOrder();">导入</button>
             </div>
 
             <div class="form-group btn-right">
