--- a/src/main/resources/templates/clothSizePage.html
+++ b/src/main/resources/templates/clothSizePage.html
@@ -2,7 +2,7 @@
 <!--suppress ALL -->
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>款式管理</title>
+        <title>尺码管理</title>
         <link rel="stylesheet" th:href="@{bootstrap/css/bootstrap.css}" />
         <link rel="stylesheet" th:href="@{bootstrap/table/bootstrap-table.css}" />
         <link rel="stylesheet" th:href="@{bootstrap/datetimepicker/css/bootstrap-datetimepicker.css}" />
@@ -19,7 +19,7 @@
         <script th:src="@{bootstrap/fileinput/js/locales/zh.js}"></script>
         <script th:src="@{bootstrap/viladator/js/bootstrapValidator.js}"></script>
         <script th:src="@{bootstrap/viladator/js/language/zh_CN.js}"></script>
-        <script th:src="@{js/stylePage.js}"></script>
+        <script th:src="@{js/clothSizePage.js}"></script>
     <meta charset="utf-8" />
     </head>
     <body style="overflow:hidden;">
@@ -30,7 +30,7 @@
         </div>
         <form class="form-inline" role="form" style="float: left; width: 100%;padding-left: 35px;" method="post" id="queryForm">
             <div class="form-group">
-                <label for="name">款式:</label>
+                <label for="name">尺码:</label>
                 <input type="text" class="form-control" name="name" id="name"  placeholder="请输入款式名称"/>
             </div>
 
@@ -57,17 +57,17 @@
                         &times;
                     </button>
                     <h4 class="modal-title" id="myModalLabel">
-                        款式编辑
+                        尺码编辑
                     </h4>
                 </div>
                 <div class="modal-body">
                     <form class="form-horizontal" role="form" id = "editForm">
                         <input style="display: none;" id = "id1"/>
                         <div class="form-group">
-                            <label for="name1" class="col-sm-2 control-label">款式</label>
+                            <label for="name1" class="col-sm-2 control-label">尺码</label>
                             <div class="col-sm-10">
                                 <input type="text" class="form-control" id="name1" name="name1"
-                                       placeholder="请输入款式名称"/>
+                                       placeholder="请输入尺码名称"/>
                             </div>
                         </div>
 
