--- a/src/main/resources/templates/stockPage.html
+++ b/src/main/resources/templates/stockPage.html
@@ -2,7 +2,7 @@
 <!--suppress ALL -->
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>款式管理</title>
+        <title>库存管理</title>
         <link rel="stylesheet" th:href="@{bootstrap/css/bootstrap.css}" />
         <link rel="stylesheet" th:href="@{bootstrap/table/bootstrap-table.css}" />
         <link rel="stylesheet" th:href="@{bootstrap/datetimepicker/css/bootstrap-datetimepicker.css}" />
@@ -19,7 +19,7 @@
         <script th:src="@{bootstrap/fileinput/js/locales/zh.js}"></script>
         <script th:src="@{bootstrap/viladator/js/bootstrapValidator.js}"></script>
         <script th:src="@{bootstrap/viladator/js/language/zh_CN.js}"></script>
-        <script th:src="@{js/stylePage.js}"></script>
+        <script th:src="@{js/stockPage.js}"></script>
     <meta charset="utf-8" />
     </head>
     <body style="overflow:hidden;">
@@ -30,8 +30,8 @@
         </div>
         <form class="form-inline" role="form" style="float: left; width: 100%;padding-left: 35px;" method="post" id="queryForm">
             <div class="form-group">
-                <label for="name">款式:</label>
-                <input type="text" class="form-control" name="name" id="name"  placeholder="请输入款式名称"/>
+                <label for="goodsName">商品:</label>
+                <input type="text" class="form-control" name="goodsName" id="goodsName"  placeholder="请输入商品名称"/>
             </div>
 
             <div class="form-group">
@@ -57,17 +57,44 @@
                         &times;
                     </button>
                     <h4 class="modal-title" id="myModalLabel">
-                        款式编辑
+                        库存编辑
                     </h4>
                 </div>
                 <div class="modal-body">
                     <form class="form-horizontal" role="form" id = "editForm">
                         <input style="display: none;" id = "id1"/>
+
                         <div class="form-group">
-                            <label for="name1" class="col-sm-2 control-label">款式</label>
+                            <label for="goodsId" class="col-sm-2 control-label">商品</label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="name1" name="name1"
-                                       placeholder="请输入款式名称"/>
+                                <select id="goodsId" name="goodsId" class="form-control">
+
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="styleId" class="col-sm-2 control-label">款式</label>
+                            <div class="col-sm-10">
+                                <select id="styleId" name="styleId" class="form-control">
+
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="clothSizeId" class="col-sm-2 control-label">尺码</label>
+                            <div class="col-sm-10">
+                                <select id="clothSizeId" name="clothSizeId" class="form-control">
+
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="sum" class="col-sm-2 control-label">库存</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="sum" name="sum"
+                                       placeholder="请输入库存"/>
                             </div>
                         </div>
 
