--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -17,7 +17,7 @@
 <body>
 <ol class="breadcrumb" style="padding-left: 40px;">
     <li><strong><button id="order" style="color: #27a0d7;padding-left: 10px;" onclick="turnPage('order')">订单管理</button></strong></li>
-    <li><strong><button style="color: #27a0d7;padding-left: 10px;">人员管理</button></strong></li>
+    <li><strong><button id="employee" style="color: #27a0d7;padding-left: 10px;" onclick="turnPage('employee')">人员管理</button></strong></li>
     <li><strong><button id="goods" style="color: #27a0d7;padding-left: 10px;" onclick="turnPage('goods')">商品管理</button></strong></li>
     <li><strong><button id="style" style="color: #27a0d7;padding-left: 10px;" onclick="turnPage('style')">款式管理</button></strong></li>
     <li><strong><button id="clothSize" style="color: #27a0d7;padding-left: 10px;" onclick="turnPage('clothSize')">尺码管理</button></strong></li>
