--- a/src/main/resources/templates/orderPage.html
+++ b/src/main/resources/templates/orderPage.html
@@ -92,6 +92,7 @@
                 });
 
             </script>
+            <div style="padding-top: 18px;"></div>
             <div class="form-group">
                 <button type="button" id="queryBtn" onclick="query();" class="btn btn-primary">查询</button>
             </div>
