--- a/src/main/resources/templates/orderPage.html
+++ b/src/main/resources/templates/orderPage.html
@@ -94,6 +94,14 @@
             </script>
             <div style="padding-top: 18px;"></div>
             <div class="form-group">
+                <label for="spreadUserName">推广人:</label>
+                <input type="text" class="form-control" name="spreadUserName" id="spreadUserName"  placeholder="请输入推广人"/>
+            </div>
+            <div class="form-group">
+                <label for="goodsName">商品名称:</label>
+                <input type="text" class="form-control" name="goodsName" id="goodsName"  placeholder="请输入商品名称"/>
+            </div>
+            <div class="form-group">
                 <button type="button" id="queryBtn" onclick="query();" class="btn btn-primary">查询</button>
             </div>
             <div class="form-group btn-right">
